--- a/login.css
+++ b/login.css
@@ -1,4 +1,9 @@
-/* login.css */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: Arial, sans-serif;
   background-color: #fff;
@@ -6,23 +11,82 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  margin: 0;
-  background-image: url(BG1.svg);
-  background-size: cover;
-  background-repeat: no-repeat;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.left-circle-1 {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  border-radius: 200px;
+  border: 1px solid black;
+  top: -130px;
+  right: -130px;
+}
+
+.left-circle-2 {
+  position: absolute;
+  width: 400px;
+  height: 400px;
+  border-radius: 200px;
+  border: 1px solid black;
+  top: -100px;
+  right: -220px;
+}
+
+.left-circle-3 {
+  position: absolute;
+  width: 350px;
+  height: 350px;
+  border-radius: 200px;
+  border: 1px solid black;
+  bottom: 100px;
+  left: -220px;
+}
+
+.left-circle-4 {
+  position: absolute;
+  width: 350px;
+  height: 350px;
+  border-radius: 200px;
+  border: 1px solid black;
+  bottom: 30px;
+  left: -220px;
+}
+@media (max-width:863px) {
+  .left-circle-1 ,.left-circle-2,.left-circle-3 ,.left-circle-4 {
+    display: none;
+  }
 }
 
 .form-body {
+  border: 2px solid red;
   padding: 48px 80px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 300px;
+  width: 500px;
   text-align: center;
   background-color: #fff;
-  background-image: url(bg2.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
+  border-radius: 20px;
+  border: 1px solid black;
+  position: relative;
+  overflow: hidden;
 }
-
+.form-circle{
+  position: absolute;
+  bottom: 0;
+  left:0;
+  width:150px;
+  z-index: 9;
+}
 h1 {
   font-size: 24px;
   margin-bottom: 30px;
@@ -39,18 +103,35 @@ span {
 .input-box {
   position: relative;
   margin-bottom: 20px;
+display: flex;
+justify-content: center;
+align-items: center;
 }
-
+.form-logo-1{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap:6px
+}
+.form-logo-2{
+  width:90px
+}
 .input-box input {
   width: 100%;
-  padding: 15px 35px 15px 15px; /* Adjusted padding for center alignment */
-  border: none; /* Remove all borders */
-  border-radius: 0; /* No border radius */
+  padding: 15px 20px;
+  /* Adjusted padding for center alignment */
+  border: none;
+  /* Remove all borders */
+  border-radius: 0;
+  /* No border radius */
   font-size: 12px;
   box-sizing: border-box;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1); /* Shadow on the bottom */
-  background-color: transparent; /* No background color */
-  border-radius: 0 0 20px 20px; /* Rounded corners on the bottom only */
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+  /* Shadow on the bottom */
+  background-color: transparent;
+  /* No background color */
+  border-radius: 20px;
+  /* Rounded corners on the bottom only */
 }
 
 .input-box i {
@@ -79,45 +160,33 @@ a:hover {
 }
 
 .btn {
-  background-color: transparent; /* No background color */
-  color: #ccc; /* Text color */
-  border: none; /* Remove all borders */
-  padding: 10px 20px;
+  background-color: white;
+  color: #ccc;
+z-index: 999;
+  border: none;
+  position: relative;
+  padding: 10px 10px;
   cursor: pointer;
   font-size: 16px;
   width: 100%;
   margin-bottom: 15px;
   display: flex;
+
   align-items: center;
   justify-content: center;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1); /* Shadow on the bottom */
-  border-radius: 20px 20px 20px 20px; /* Rounded corners on the bottom only */
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 20px 20px 20px 20px;
 }
 
-.btn:hover {
-  background-color: rgba(
-    0,
-    123,
-    255,
-    0.1
-  ); /* Light background color on hover */
+.btn p{
+   width:80%;
 }
 
-.btn i {
-  position: fixed;
-  margin-right: 5px;
-  margin-left: -200px; /* Adjust the icon position to be on the left side */
-  color: #888;
-}
 
 /* Media Queries */
 @media only screen and (max-width: 600px) {
   .form-body {
     padding: 48px 30px;
-    width: 100%;
-    background-size: cover;
-  }
-  body {
-    background-size: cover;
+    width: 97%;
   }
 }
